                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-07-2005 fixed: Constant hdd access in weather.
 - 14-07-2005 changed: leak tracking, smarter define of the debug new operator (in stdafx.h only) no need for a macro in each cpp file
 - 14-07-2005 fixed: memleak in the rar archive reader
 - 13-07-2005 fixed: Music Library "All" items producing "No Scanned Information" error
 - 13-07-2005 fixed: ftp server can not be shut down via settings menu
 - 13-07-2005 fixed: reference controls got not freed after skin load
 - 13-07-2005 fixed: small mem leak in weather
 - 13-07-2005 changed: enabled CRT mem leak tracking in debug builds
                       To get a dump of leaks in the vc output window use the shutdown menu to shut down the application.
                       NOTE: Not all leaks displayed there are real leaks as parts of the application are still allocated,
                       but nevertheless its usefull ;)
 - 13-07-2005 fixed: Fullscreen visualisation actions weren't working for non-milkdrop vis's.
 - 13-07-2005 added: Deinterlacing for dvdplayer, automatic support for most dvd's/mpegs, possible to manually enable through options
 - 13-07-2005 added: HTTPAPI: all commands are now available through ASP
 - 13-07-2005 added: HTTPAPI: GetPlaySpeed and SetPlaySpeed commands
 - 13-07-2005 updated: ffmpeg for the dvdplayer to the latest cvs version
 - 13-07-2005 fixed: Numeric dialog problems.
 - 13-07-2005 changed: RSS feeds are shown if video is playing.
 - 12-07-2005 fixed: more consistant use of default username/password on smb. Now falls back to anonomous access should the default user/pass fail. 